<?xml version="1.0"?>
<package>
  <name>ros_rtm_gateway</name>
  <version>0.0.0</version>
  <description>The ros_rtm_gateway package</description>

  <maintainer email="gbrj@todo.todo">gbrj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
